# c-computer-processor

./: ALU.c  CMakeLists.txt  DataMemory.c  InstructionMemory.c  Main.c  README.md  Registers.c  main.c  runner
src/: CMakeLists.txt  Main.c  Main.h  assembly.txt  test2.txt
src/ALU/: ALU.c
src/DataMemory/: DataMemory.c  DataMemory.h
src/Headers/: ALU.h  DataMemory.h  InstructionMemory.h  Main.h  Registers.h  Structs.h
src/InstructionMemory/: InstructionMemory.c  InstructionMemory.h
src/Main/: Main.c
src/Registers/: Registers.c  Registers.h
src/Test/: ADD-Test.txt  BR-LDR-STR-Test.txt  BR-Test.txt  Expected-Output.md  MOVI-Test.txt  MUL-Test.txt  SAL-Test.txt  SAR-Test.txt  SUB-Test.txt  addTest.txt  assembly.txt  moviTest.txt  resultsElTests  sarTest.txt  subTest.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
